--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,15 @@ dependencies {
     implementation 'me.relex:circleindicator:2.1.6'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    implementation 'com.squareup.retrofit2:retrofit:(insert latest version)'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+    implementation platform('com.google.firebase:firebase-bom:30.4.1')
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'androidx.browser:browser:1.3.0'
+    implementation 'com.google.android.gms:play-services-auth:20.3.0'
+
 
 }
