--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation 'androidx.browser:browser:1.3.0'
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
+    implementation 'androidx.browser:browser:1.3.0'
 
 
 }
