--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ChangePasswordActivity"
+            android:name=".Activities.ChangePasswordActivity"
             android:exported="false" />
         <activity
-            android:name=".Activities.RegisterSuccessActivity"
+            android:name=".Activities.SuccessActivity"
             android:exported="false" />
         <activity
             android:name=".Activities.OtpVerifyActivity"
