--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation 'androidx.browser:browser:1.4.0'
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
+    implementation 'com.airbnb.android:lottie:5.2.0'
 
 
 }
