--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.firebase:firebase-storage:20.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -50,6 +51,5 @@ dependencies {
     implementation 'androidx.browser:browser:1.4.0'
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
     implementation 'com.airbnb.android:lottie:5.2.0'
-
-
+    implementation 'io.github.ParkSangGwon:tedimagepicker:1.1.10'
 }
