--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:24.4.1'
     implementation fileTree(dir: 'C:\\Users\\nhatl\\Downloads\\zalopay', include: ['*.aar', '*.jar'], exclude: [])
     implementation fileTree(dir: 'C:\\Users\\Admin\\Desktop\\ZaloPay', include: ['*.aar', '*.jar'], exclude: [])
+    implementation 'com.google.android.gms:play-services-analytics-impl:18.0.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
@@ -68,6 +69,7 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.6.0")
     implementation("commons-codec:commons-codec:1.14")
     implementation 'com.google.android.gms:play-services-safetynet:18.0.1'
+    testImplementation 'org.mockito:mockito-core:2.23.4'
 
 
 }
