--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation fileTree(dir: 'C:\\Users\\nhatl\\Downloads\\zalopay', include: ['*.aar', '*.jar'], exclude: [])
     implementation fileTree(dir: 'C:\\Users\\Admin\\Desktop\\ZaloPay', include: ['*.aar', '*.jar'], exclude: [])
     implementation 'com.google.android.gms:play-services-analytics-impl:18.0.2'
+    implementation files('Downloads')
+    implementation fileTree(dir: 'C:\\Users\\Admin\\Downloads\\Programs', include: ['*.aar', '*.jar'], exclude: [])
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
